2012/10/12: 1.[SDK工具-问题修复] 	a) 修复Less CSS异步编译失败问题 	b) 修复nl2br()函数不支持中文的问题
2.[SDK工具-调整优化]
	a) 新建模块时，添加自动创建Less CSS文件或者JS 文件功能
	b) 移除简易模板创建设计师模块的功能
	c) 修改“如何编写模块”的链接：http://wiki.zx.taobao.com/tools/systemmodules/welcome.php
	d) 减少系统资源的占用，增强SDK处理并发请求的能力	
	e) 创建模块时，默认宽度全部选择
    f) 模块创建时，默认选择less文件创建
	g) 优化模块中less文件的内容
	h) 模板创建时，默认类型选择“高级模板”		
	i) 减少软件资源开销，提升处理并发请求的能力